[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.1.2",
    "ruff>=0.9.7",
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.ruff]
extend-include = ["*.ipynb"]
